Add more tests and methods

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,13554],[[4,5,6,0,[],[1,11,13542],[],[[7,0,0,[],[1,1415,2134],[]],[8,0,0,[],[1,3549,5755],[]],[9,0,0,[],[1,9306,3650],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,24190],[[4,5,6,0,[],[1,11,24180],[],[[7,0,0,[],[1,983,4138],[]],[8,0,0,[],[1,5121,7710],[]],[9,0,0,[],[1,12831,3577],[]],[10,0,0,[],[1,16409,7199],[]]],[],[4,4,0,0]]],[],[],[4,4,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/jadeho/webcounter/src/tests","*src/tests","*Increment","*/Users/jadeho/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*When button pressed the counter is zero"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/jadeho/webcounter/src/tests","*src/tests","*Increment","*/Users/jadeho/webcounter/src/tests/increment.robot","*src/tests/increment.robot","*At start the counter is zero","*When button pressed twice the counter is two","*When button pressed the counter is zero","*Set counter to one"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:14","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:24","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":4,"skip":0},{"elapsed":"00:00:24","fail":0,"id":"s1-s1","label":"Tests.Increment","name":"Increment","pass":4,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1763395873549;
+window.output["baseMillis"] = 1763407186688;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 13557;
+window.output["generated"] = 24194;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
